# gemini-cli-mcp-servers

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.gemini/: settings.json
dynagent_server/: main.py  pyproject.toml
google_oss_server/: README.md  main.py  pyproject.toml
promptgen_server/: CONTRIBUTING.md  README.md  main.py  pyproject.toml
superagent_server/: README.md  main.py  pyproject.toml
